fixed macro notes typos

--- a/content/resources/private/spr_2025/econ_6140_notes.tex
+++ b/content/resources/private/spr_2025/econ_6140_notes.tex
@@ -1090,7 +1090,7 @@ Today, we will talk about \blue{Dixit-Stiglitz (CES) Demand Systems} (from \href
 \subsection{Basic New Keynesian Model II}\label{subsec:4}
 
 
-If a fraction $(1-\theta)$ of firms set price $P\opt_t$, the aggregate price level will follow \[P_t = \barl \theta (P_{t-1})^{1-\varepsilon} + (1-\theta) (P_t\opt)^{1-\varepsilon}\barr^{\frac{1}{1-\varepsilon}}\]which can be rearranged to \[\Pi_t^{1-\varepsilon} = \theta + (1-\theta) \parl \frac{P_t\opt}{P_{t-1}}\parr^{1-\varepsilon}\]Log-linearization around the zero-inflation steady state gives\[\pi_t = (1-\theta) (p_t\opt - p_{t-1}) \equiv p_t = \theta p_{t-1}+(1-\theta)p_t\opt\]Using the stochastic discount factor of the households, firms maximize expected discounted profits\[\max_{P_t\opt}\sum_{k=0}^\infty \theta^k \expect_t \Big\{ \Lambda_{t,t+k}(1/P_{t+k})\parl P_t\opt \cdot Y_{t+k\mid t}-\mathcal{C}_{t+k} (Y_{t+k\mid t})\parr \Big\}\]subject to \[Y_{t+k\mid t} = \parl \frac{P_t\opt}{P_{t+k}}\parr^{-\varepsilon} Y_{t+k} \forall k = 0,1,\dots\]Note that the firm can only affect the rightmost term in the maximization problem, not the given prices or stochastic discount factor. The first order condition of the price-setting problem is \[\sum_{k=0}^\infty \theta^k \expect_t \Big\{ \Lambda_{t,t+k} Y_{t+k\mid t}(1/P_{t+k})\parl P_t\opt - \mathcal{M}\Psi_{t+k\mid t} \parr\Big\} = 0\]where $\Psi_{t+k\mid t} = \mathcal{C}'_{t+k}(Y_{t+k\mid t})$ is the nominal marginal cost of a firm producing a good in period $t+k$ with price $P_t\opt$, and $\mathcal{M} = \frac{\varepsilon}{\varepsilon -1}$ is the desired markup. Note that if $\theta=0$, this equation simplifies to $P_t\opt = \mathcal{M} \Psi_{t\mid t}$. The linearized optimal price setting condition around a zero-inflation steady state is given by \[p_t\opt = \mu + (1-\beta\theta)\sum_{k=0}^\infty (\beta\theta)^k \expect_t\{\psi_{t+k \mid t}\}\]where $\mu = \log \mathcal{M}$ and $\psi= \log\Psi$. Essentially, firms are looking to set the price that results in the optimal markup, weighted to the discount factor and the probability of the price still being in place $k$ periods in the future. The nominal marginal cost is the wage divided by the marginal productivity of labor, so \[\psi_{t+k \mid t} = w_{t+k} - \parl a_{t+k} - \alpha \cdot n_{t+k\mid t} + \log (1-\alpha)\parr\]We can define the component of marginal cost that is constant across firms (so not dependent on the price set today) as \[\psi_{t+k} =  w_{t+k} - \parl a_{t+k} - \alpha \cdot n_{t+k} + \log (1-\alpha)\parr\]Thus, we have that \[\psi_{t+k \mid t} = \psi_{t+k} + \alpha (n_{t+k\mid t} - n_{t+k}) = \psi_{t+k} + \frac{\alpha\varepsilon}{1-\alpha }(p_t\opt - p_{t+k})\]Define the marginal cost as $\widehat{\text{mc}}_t = \psi_t - p_t + \mu$, and substituting into the optimal price setting equation we get \[p_t\opt = (1-\beta\theta) \sum_{k=0}^\infty (\beta\theta)^k \expect_t \curll \widehat{\text{mc}}_{t+k} - \frac{\alpha\varepsilon}{1-\alpha} (p_t\opt - p_{t+k}) + p_{t+k}\curlr\]Simplifying, this becomes\[p_t\opt = (1-\beta\theta) \sum_{k=0}^\infty (\beta\theta)^k \expect_t \curll \frac{1-\alpha}{1-\alpha +\alpha\varepsilon}\widehat{\text{mc}}_{t+k} + p_{t+k}\curlr\]Writing recursively, we get \[p_t\opt =\beta\theta \expect_t p_{t+1}\opt + (1-\beta\theta) \parl  \frac{1-\alpha}{1-\alpha +\alpha\varepsilon}\widehat{\text{mc}}_{t} + p_{t}\parr\]Subtracting $p_{t-1}$ from both sides and adding and subtracting $\beta\theta p_t$, and using the fact that $p_t\opt - p_{t-1} = (1-\theta)^{-1} \pi_t$, we get \[(1-\theta)^{-1} \pi_t = (1-\theta)^{-1} \beta\theta \expect_t \{\pi_{t+1}\} + (1-\beta\theta) \parl  \frac{1-\alpha}{1-\alpha +\alpha\varepsilon}\widehat{\text{mc}}_{t}\parr + \pi_t\]so we get that\[\pi_t = \beta \expect_t\{\pi_{t+1}\} + \frac{(1-\theta)(1-\beta\theta)}{\theta} \frac{1-\alpha}{1-\alpha + \alpha\varepsilon} \widehat{\text{mc}}_t\]The real marginal cost is the real wage divided by the marginal productivity of labor, so\[\text{mc}_t = \psi_t - p_t = \parl \sigma + \frac{\varphi + \alpha}{1-\alpha} \parr y_t - \parl \frac{1+\varphi}{1-\alpha}\parr a_t - \log(1-\alpha)\]So real marginal cost is a function of both output and productivity. If we have flexible prices (where $\theta=0$), the markup is constant and equal to negative marginal cost:\[\text{mc} = -\mu = \parl \sigma + \frac{\varphi + \alpha}{1-\alpha} \parr y_t^n - \parl \frac{1+\varphi}{1-\alpha}\parr a_t - \log(1-\alpha)\]where $y_t^n$ is the natural level of output which we can solve for: \[y_t^n = \frac{1+\varphi}{\sigma(1-\alpha) + \varphi + \alpha} a_t = \frac{(1-\alpha)(\mu - \log(1-\alpha))}{\sigma (1-\alpha) + \varphi + \alpha}\]The deviation of marginal cost from the steady state is equal to the output gap:\[\widehat{\text{mc}}_t = \parl \sigma + \frac{\varphi+\alpha}{1-\alpha}\parr (y_t - y_t^n)\]If we combine this with the (previously assumed) goods and labor market clearing conditions, we can finally derive the \blue{New Keynesian Phillips Curve}\[\pi_t = \beta \expect_t\{\pi_{t+1}\} + \kappa \tilde{y}_t\]where $\tilde{y}_t = y_t - y_t^n$ and $\kappa = \parl \sigma + \frac{\varphi + \alpha}{1-\alpha}\parr \frac{(1-\theta)(1-\beta\theta)}{\theta} \frac{1-\alpha}{1-\alpha+\alpha\varepsilon}$. We also have the \blue{Dynamic IS equation}\[\tilde{y}_t = \expect_t\{\tilde{y}_{t+1}\} - \frac{1}{\sigma} \parl i_t + \expect_t\{\pi_{t+1}\}-r_t^n\parr\]where $r_t^n$ is the \blue{natural rate of interest}, given by $r_t^m = \rho - \sigma(1-\rho_a)\psi_{ya}a_t + (1-\rho_t) z_t$. We can finally close the model by writing a Taylor-type rule for the nominal interest rate, where \[i_t = \rho - \phi_\pi \pi_t + \phi_y \hat{y}_t + v_t\]where $\hat{y}_t = y_t - y$ and $v_t = \rho_v v_{t-1} + \varepsilon_t^v$. We can use the method of undetermined coefficients to solve for inflation and the output gap, which we'll be able to write as a function of the composite shocks. Next time, we will talk more about the dynamics of the solved model.
+If a fraction $(1-\theta)$ of firms set price $P\opt_t$, the aggregate price level will follow \[P_t = \barl \theta (P_{t-1})^{1-\varepsilon} + (1-\theta) (P_t\opt)^{1-\varepsilon}\barr^{\frac{1}{1-\varepsilon}}\]which can be rearranged to \[\Pi_t^{1-\varepsilon} = \theta + (1-\theta) \parl \frac{P_t\opt}{P_{t-1}}\parr^{1-\varepsilon}\]Log-linearization around the zero-inflation steady state gives\[\pi_t = (1-\theta) (p_t\opt - p_{t-1}) \equiv p_t = \theta p_{t-1}+(1-\theta)p_t\opt\]Using the stochastic discount factor of the households, firms maximize expected discounted profits\[\max_{P_t\opt}\sum_{k=0}^\infty \theta^k \expect_t \Big\{ \Lambda_{t,t+k}(1/P_{t+k})\parl P_t\opt \cdot Y_{t+k\mid t}-\mathcal{C}_{t+k} (Y_{t+k\mid t})\parr \Big\}\]subject to \[Y_{t+k\mid t} = \parl \frac{P_t\opt}{P_{t+k}}\parr^{-\varepsilon} Y_{t+k} \forall k = 0,1,\dots\]Note that the firm can only affect the rightmost term in the maximization problem, not the given prices or stochastic discount factor. The first order condition of the price-setting problem is \[\sum_{k=0}^\infty \theta^k \expect_t \Big\{ \Lambda_{t,t+k} Y_{t+k\mid t}(1/P_{t+k})\parl P_t\opt - \mathcal{M}\Psi_{t+k\mid t} \parr\Big\} = 0\]where $\Psi_{t+k\mid t} = \mathcal{C}'_{t+k}(Y_{t+k\mid t})$ is the nominal marginal cost of a firm producing a good in period $t+k$ with price $P_t\opt$, and $\mathcal{M} = \frac{\varepsilon}{\varepsilon -1}$ is the desired markup. Note that if $\theta=0$, this equation simplifies to $P_t\opt = \mathcal{M} \Psi_{t\mid t}$. The linearized optimal price setting condition around a zero-inflation steady state is given by \[p_t\opt = \mu + (1-\beta\theta)\sum_{k=0}^\infty (\beta\theta)^k \expect_t\{\psi_{t+k \mid t}\}\]where $\mu = \log \mathcal{M}$ and $\psi= \log\Psi$. Essentially, firms are looking to set the price that results in the optimal markup, weighted to the discount factor and the probability of the price still being in place $k$ periods in the future. The nominal marginal cost is the wage divided by the marginal productivity of labor, so \[\psi_{t+k \mid t} = w_{t+k} - \parl a_{t+k} - \alpha \cdot n_{t+k\mid t} + \log (1-\alpha)\parr\]We can define the component of marginal cost that is constant across firms (so not dependent on the price set today) as \[\psi_{t+k} =  w_{t+k} - \parl a_{t+k} - \alpha \cdot n_{t+k} + \log (1-\alpha)\parr\]Thus, we have that \[\psi_{t+k \mid t} = \psi_{t+k} + \alpha (n_{t+k\mid t} - n_{t+k}) = \psi_{t+k} + \frac{\alpha\varepsilon}{1-\alpha }(p_t\opt - p_{t+k})\]Define the marginal cost as $\widehat{\text{mc}}_t = \psi_t - p_t + \mu$, and substituting into the optimal price setting equation we get \[p_t\opt = (1-\beta\theta) \sum_{k=0}^\infty (\beta\theta)^k \expect_t \curll \widehat{\text{mc}}_{t+k} - \frac{\alpha\varepsilon}{1-\alpha} (p_t\opt - p_{t+k}) + p_{t+k}\curlr\]Simplifying, this becomes\[p_t\opt = (1-\beta\theta) \sum_{k=0}^\infty (\beta\theta)^k \expect_t \curll \frac{1-\alpha}{1-\alpha +\alpha\varepsilon}\widehat{\text{mc}}_{t+k} + p_{t+k}\curlr\]Writing recursively, we get \[p_t\opt =\beta\theta \expect_t p_{t+1}\opt + (1-\beta\theta) \parl  \frac{1-\alpha}{1-\alpha +\alpha\varepsilon}\widehat{\text{mc}}_{t} + p_{t}\parr\]Subtracting $p_{t-1}$ from both sides and adding and subtracting $\beta\theta p_t$, and using the fact that $p_t\opt - p_{t-1} = (1-\theta)^{-1} \pi_t$, we get \[(1-\theta)^{-1} \pi_t = (1-\theta)^{-1} \beta\theta \expect_t \{\pi_{t+1}\} + (1-\beta\theta) \parl  \frac{1-\alpha}{1-\alpha +\alpha\varepsilon}\widehat{\text{mc}}_{t}\parr + \pi_t\]so we get that\[\pi_t = \beta \expect_t\{\pi_{t+1}\} + \frac{(1-\theta)(1-\beta\theta)}{\theta} \frac{1-\alpha}{1-\alpha + \alpha\varepsilon} \widehat{\text{mc}}_t\]The real marginal cost is the real wage divided by the marginal productivity of labor, so\[\text{mc}_t = \psi_t - p_t = \parl \sigma + \frac{\varphi + \alpha}{1-\alpha} \parr y_t - \parl \frac{1+\varphi}{1-\alpha}\parr a_t - \log(1-\alpha)\]So real marginal cost is a function of both output and productivity. If we have flexible prices (where $\theta=0$), the markup is constant and equal to negative marginal cost:\[\text{mc} = -\mu = \parl \sigma + \frac{\varphi + \alpha}{1-\alpha} \parr y_t^n - \parl \frac{1+\varphi}{1-\alpha}\parr a_t - \log(1-\alpha)\]where $y_t^n$ is the natural level of output which we can solve for: \[y_t^n = \frac{1+\varphi}{\sigma(1-\alpha) + \varphi + \alpha} a_t = \frac{(1-\alpha)(\mu - \log(1-\alpha))}{\sigma (1-\alpha) + \varphi + \alpha}\]The deviation of marginal cost from the steady state is equal to the output gap:\[\widehat{\text{mc}}_t = \parl \sigma + \frac{\varphi+\alpha}{1-\alpha}\parr (y_t - y_t^n)\]If we combine this with the (previously assumed) goods and labor market clearing conditions, we can finally derive the \blue{New Keynesian Phillips Curve}\[\pi_t = \beta \expect_t\{\pi_{t+1}\} + \kappa \tilde{y}_t\]where $\tilde{y}_t = y_t - y_t^n$ and $\kappa = \parl \sigma + \frac{\varphi + \alpha}{1-\alpha}\parr \frac{(1-\theta)(1-\beta\theta)}{\theta} \frac{1-\alpha}{1-\alpha+\alpha\varepsilon}$. We also have the \blue{Dynamic IS equation}\[\tilde{y}_t = \expect_t\{\tilde{y}_{t+1}\} - \frac{1}{\sigma} \parl i_t + \expect_t\{\pi_{t+1}\}-r_t^n\parr\]where $r_t^n$ is the \blue{natural rate of interest}, given by $r_t^n = \rho - \sigma(1-\rho_a)\psi_{ya}a_t + (1-\rho_t) z_t$. We can finally close the model by writing a Taylor-type rule for the nominal interest rate, where \[i_t = \rho - \phi_\pi \pi_t + \phi_y \hat{y}_t + v_t\]where $\hat{y}_t = y_t - y$ and $v_t = \rho_v v_{t-1} + \varepsilon_t^v$. We can use the method of undetermined coefficients to solve for inflation and the output gap, which we'll be able to write as a function of the composite shocks. Next time, we will talk more about the dynamics of the solved model.
 
 
 \subsection{Rational Expectations Models}\label{subsec:5}
@@ -1242,7 +1242,7 @@ Under commitment, the policymaker solves the problem of finding a state-continge
 	Optimal wage setting solves the problem \[\max_{W_t\opt} \expect_t \sum_{k=0}^\infty (\beta \theta_w)^k \parl C_{t+k}^{-\sigma} \frac{W_t\opt}{P_{t+k}}N_{t+k\mid t} - \frac{N_{t+k\mid t}^{1+\varphi}}{1+\varphi}\parr Z_{t+k}\]subject to\[N_{t+k\mid t} = \parl \frac{W_t\opt}{W_{t+k}}\parr^{-\varepsilon_w} \parl \int_0^1 N_{t+k}(i)\;\partial i\parr\]Which admits first order condition \[\sum_{k=0}^\infty (\beta\theta_w)^k \expect_t \curll N_{t+k\mid t} Z_{t+k} C_{t+k}^{-\sigma} \parl \frac{W_t\opt}{P_{t+k}} - \mathcal{M}_w MRS_{t+k\mid t}\parr\curlr = 0\]where $MRS_{t+k\mid t} = C_{t+k}^\sigma N_{t+k\mid t}^\varphi$ and $\mathcal{M}_w = \frac{\varepsilon_w}{\varepsilon_w-1}$. The log-linearized version is \[w_t\opt = \mu^w + (1-\beta\theta_w) \sum_{k=0}^\infty (\beta\theta_w)^k \expect_t\{mrs_{t+k\mid t} + p_{t+k}\}\]or equivalently, \[w_t\opt = \frac{1-\beta\theta_w}{1+\varepsilon_w\varphi} \sum_{k=0}^\infty (\beta\theta_w)^k \expect_t\curll (1-\varepsilon_w\varphi)w_{t+k} - \hat{\mu}_{t+k}^w\curlr\]where $\mu_t^w = w_t - p_t - mrs_t$ and $mrs_t = \sigma c_t + \varphi n_t$. The wage inflation equation is \[\pi_t^w = \beta \expect_t\{\pi_{t+1}^w\} - \lambda_w (\mu_t^w - \mu^w)\]where $\lambda_w = \frac{(1-\beta\theta_w)(1-\theta_w)}{\theta_w(1+\varphi \varepsilon_w)}$, so wage stickiness is introduced in a way that is completely analogous to price stickiness. 
 	
 	Equilibrium requires market clearing in goods, meaning that \[Y_t(i) = C_t(i) \forall i \in [0,1] \Longrightarrow Y_t = C_t,\text{ where } Y_t = \parl \int_0^1 Y_t(i)^{1-\frac{1}{\varepsilon_p}}\partial i\parr^{\frac{\varepsilon_p}{\varepsilon_p-1}}\]and aggregate employment, so we have that 
-	\begin{align*})
+	\begin{align*}
 		N_t &= \int_0^1 \int_0^1 N_t(i,j)\partial j \partial i = \int_0^1 N_t(i) \int_0^1 \frac{N_t(i,j)}{N_t(i)}\partial j\partial i = \Delta_{w,t} \int_0^1 N_t(i)\partial i \\ 
 		&= \Delta_{w,t} \parl \frac{Y_t}{A_t}\parr^{\frac{1}{1-\alpha}} \int_0^1 \parl \frac{Y_t(i)}{Y_t}\parr^{\frac{1}{1-\alpha}}\partial i = \Delta_{w,t} \Delta_{p,t} \parl \frac{Y_t}{A_t}\parr^{\frac{1}{1-\alpha}}
  	\end{align*}
@@ -1354,7 +1354,7 @@ This nests ``observable'' VAR($p$), MA($p$), and VARMA($p,q$) processes as well 
 	For state spaces of the form \begin{align*} X_t &= A_t X_{t-1} + C_t \bm{u}_t \\ Z_t &= D_tX_t + \bm{v}_t\end{align*}the Kalman filter recursively computes estimates of $X_t$ conditional on the history of observations $Z_t,Z_{t-1},\dots,Z_0$ and an initial estimate (or prior) $X_{0\mid0}$ with variance $P_{0\mid0}$. The form of the filter is \[X_{t\mid t} = A_t X_{t-1 \mid t-1} + K_t (Z_t - D_t X_{t \mid t-1})\]and the task is thus to find the \blue{Kalman gain} $K_t$ so that the estimates $X_{t \mid t}$ are in some sense `optimal'. We define \[X_{t \mid t-s} = \expect \barl X_t \mid Z^{t-s}\barr \qquad \text{ and } \qquad P_{t \mid t-s} = \expect \barl (X_t - X_{t \mid t-s})(X_t - X_{t \mid t-s})'\barr\]
 \end{definition}
 
-\begin{example}]\red{A Simple Example} 
+\begin{example}\red{A Simple Example} 
 	Let's say that we have noisy measures $z_1$ of an unobservable process $x$ such that $z_1 = x + v_1$, where $v_1 \sim \normal(0,\sigma_1^2)$. Since the signal is unbiased, the minimum variance estimate $\expect[x \mid z_1] = \hat{x}$ of $x$ is given by $\hat{x} = z_1$, and its variance is equal to the variance of the noise $\expect[\hat{x}-x]^2 = \sigma_1^2$. 
 	
 	Now say we have a second measure $z_2$ of $x$ so that $z_2 = x + v_2$, where $v_2 \sim \normal(0,\sigma_2^2)$. How can we combine the information in the two signals to find the minimum variance estimate of $x$? Clearly, we will restrict to linear estimators of the form \[\hat{x} = (1-a)z_1 + az_2\]and we will simply minimize $\expect\barl (1-a)z_1 + az_2 - x\barr^2$ with respect to $a$.  We rewrite the variance as\[\expect \barl (1-a)(x+v_1) + a(x+v_2) - x\barr^2 = \sigma_1^2 - 2a \sigma_1^2 + a^2 \sigma_1^2 + a^2 \sigma_2^2\]Our first order condition attains $a = \frac{\sigma_1^2}{\sigma_1^2 + \sigma_2^2}$. The minimum variance estimate of $x$ is thus\[\hat{x} = \frac{\sigma_2^2}{\sigma_1^2 + \sigma_2^2}z_1 + \frac{\sigma_1^2}{\sigma_1^2 + \sigma_2^2}z_2\]which has conditional variance \[\expect[\hat{x}-x]^2 = \parl \frac{1}{\sigma^2_1} + \frac{1}{\sigma^2_2}\parr^{-1}\]As long as $\sigma_2^2 < \infty$, this strictly improves on the variance of the estimate with only one signal. 
@@ -1398,7 +1398,7 @@ The Kalman filter will optimally combine information in the prior $\rho x_{t-1\m
 	
 	With these, we can find the Kalman gain, which as a reminder is defined by the equation \[X_{t\mid t} = A_t X_{t-1\mid t-1} + K_t(Z_t - D_t X_{t\mid t-1})\]
 	
-	We start from the first-period problem of how to optimally combine the information in the prior $X_{0\mid0}$ and the signal $Z_1$. We will use that $Z_1 = D_1A_1X_0 + D_1 C\bm{u}_1 + \bm{v}_1$ and that we know that $\bm{u}_t$ and $\bm{v}_t$ are orthogonal to $X_{0\mid0}$ to first find the optimal projection of $Z_1$ on $Z_{0\mid0}$: $Z_{1\mid0} = D_1A_1X_{0\mid0}$. We can then define the period 1 innovation $\tilde{Z}_1$ in $Z_1$ as $\tilde{Z}_1 = Z_1 - Z_{1\mid0}$. We know that \[\expect \parl X_1 \mid \tilde{Z}_1,X_{0\mid0}\parr = \expect \parl X_1 \mid \tilde{Z}_1\parr + \expect \parl X_1 \mid X_{0\mid0}\parr\]since $\tilde{Z}_1 \perp X_{0\mid0}$ and $\expect(Z_1\mid X_{0\mid0}) = D_1A_1X_{0\mid0}$. From the projection theorem, we will look for a $K_1$ such that thye inner product of the projection error and $\tilde{Z}_1$ is zero:\[\left\langle X_1 - K_1\tilde{Z}_1,\tilde{Z}_1\right\rangle = 0\]Defining the inner product $\langle X,Y\rangle$ as $\expect(XY')$, we get \begin{align*} \expect \barl \parl X_1 - K_t \tilde{Z}_1\parr\tilde{Z}_1'\barr &= 0 \\ \expect\barl Z_1\tilde{Z}_1'\barr - K_1 \expect \barl \tilde{Z}_1\tilde{Z}_1'\barr &= 0 \\ K_1 &= \expect\barl X_1 \tilde{Z}_1'\barr \parl \expect \barl \tilde{Z}_1\tilde{Z}_1'\barr\parr^{-1}\end{align*}We thus need to evaluate the two expectational expressions. Before doing so it helps to define the state innovation $\tilde{X}_1 = X_1 - X_{1\mid 0}$, so $\tilde{X}_1$ is the one period error. The first expectation factor of $K_1$ can now be manipulated as follows:\[\expect\barl X_1\tilde{Z}_1'\barr = \expect \parl \tilde{X}_1 + X_{1\mid0}\parr \tilde{Z}_1'=\expect\tilde{X}_1 \tilde{Z}_1' = \expect \tilde{X}_1 \parl \tilde{X}_1D' + \bm{v}_1'\parr = P_{1\mid0}D'\]Evaluating the second expectation factor as follows\[\expect\barl \tilde{Z}_1 \tilde{Z}_1'\barr = \expect \barl \parl D_1\tilde{X}_1 + \bm{v}_1\parr \parl D_1\tilde{X}_1 + \bm{v}_1\parr'\barr = D_1P_{1\mid0}D_1' + \Sigma_{vv}\]gives us the last component needed to find $K_1$:\[K_1 = P_{1\mid0}D_1'\parl D_1P_{1\mid0}D_1'+\Sigma_{vv}\parr^{-1}\]where we know that $P_{1\mid0} = A_1P_{0\mid0}A_1' + C_0C_0'$. We can add the projections of $X_1$ on $\tilde{Z}_1$ and $X_{0\mid0}$ to recover the linear minimum variance estimate $X_{1\mid1}$\[X_{1\mid1} = \expect \parl X_1 \mid X_{0\mid0}\parr + \expect\parl X_1\mid \tilde{Z}_1\parr= A_1X_{0\mid0} + K_1\tilde{Z}_1\]It remains to find an expression for the period $t$ covariance. We can rewrite $X_{t\mid t} = K_t \tilde{Z}_t + X_{t\mid t-1}$ as \[X_1 - X_{t\mid t} + K_t \tilde{Z}_t = X_t - X_{t\mid t-1}\]Since the period $t$ error $X_t - X_{t\mid t}$ is orthogonal to $\tilde{Z}_t$, the variance of the right hand side must be equal to the sum of the variances of the terms on the left hand side. We thus have \[P_{t\mid t} + K_t\parl DP_{t\mid t-1} D' + \Sigma_{vv}\parr K_t' = P_{t\mid t-1}\]Rearranging,\[P_{t\mid t} = P_{t\mid t-1} - K_t\parl DP_{t\mid t-1} D' + \Sigma_{vv}\parr K_t' = P_{t\mid t-1} - P_{t\mid t-1}D_t'\parl D_t P_{t\mid t-1}D_t' + \Sigma_{vv}\parr^{-1}D_tP_{t\mid t-1}\]It is then straightforward to show that \[P_{t+1\mid t} = A_{t+1} P_{t\mid t} A_{t+1}' + CC' = A_{t+1}\parl P_{t\mid t-1} - P_{t\mid t-1}D_t'\parl D_t P_{t\mid t-1}D_t' + \Sigma_{vv}\parr^{-1}D_tP_{t\mid t-1} \parr A_{t+1}'+CC'\]
+	We start from the first-period problem of how to optimally combine the information in the prior $X_{0\mid0}$ and the signal $Z_1$. We will use that $Z_1 = D_1A_1X_0 + D_1 C\bm{u}_1 + \bm{v}_1$ and that we know that $\bm{u}_t$ and $\bm{v}_t$ are orthogonal to $X_{0\mid0}$ to first find the optimal projection of $Z_1$ on $Z_{0\mid0}$: $Z_{1\mid0} = D_1A_1X_{0\mid0}$. We can then define the period 1 innovation $\tilde{Z}_1$ in $Z_1$ as $\tilde{Z}_1 = Z_1 - Z_{1\mid0}$. We know that \[\expect \parl X_1 \mid \tilde{Z}_1,X_{0\mid0}\parr = \expect \parl X_1 \mid \tilde{Z}_1\parr + \expect \parl X_1 \mid X_{0\mid0}\parr\]since $\tilde{Z}_1 \perp X_{0\mid0}$ and $\expect(Z_1\mid X_{0\mid0}) = D_1A_1X_{0\mid0}$. From the projection theorem, we will look for a $K_1$ such that the inner product of the projection error and $\tilde{Z}_1$ is zero:\[\left\langle X_1 - K_1\tilde{Z}_1,\tilde{Z}_1\right\rangle = 0\]Defining the inner product $\langle X,Y\rangle$ as $\expect(XY')$, we get \begin{align*} \expect \barl \parl X_1 - K_t \tilde{Z}_1\parr\tilde{Z}_1'\barr &= 0 \\ \expect\barl Z_1\tilde{Z}_1'\barr - K_1 \expect \barl \tilde{Z}_1\tilde{Z}_1'\barr &= 0 \\ K_1 &= \expect\barl X_1 \tilde{Z}_1'\barr \parl \expect \barl \tilde{Z}_1\tilde{Z}_1'\barr\parr^{-1}\end{align*}We thus need to evaluate the two expectational expressions. Before doing so it helps to define the state innovation $\tilde{X}_1 = X_1 - X_{1\mid 0}$, so $\tilde{X}_1$ is the one period error. The first expectation factor of $K_1$ can now be manipulated as follows:\[\expect\barl X_1\tilde{Z}_1'\barr = \expect \parl \tilde{X}_1 + X_{1\mid0}\parr \tilde{Z}_1'=\expect\tilde{X}_1 \tilde{Z}_1' = \expect \tilde{X}_1 \parl \tilde{X}_1D' + \bm{v}_1'\parr = P_{1\mid0}D'\]Evaluating the second expectation factor as follows\[\expect\barl \tilde{Z}_1 \tilde{Z}_1'\barr = \expect \barl \parl D_1\tilde{X}_1 + \bm{v}_1\parr \parl D_1\tilde{X}_1 + \bm{v}_1\parr'\barr = D_1P_{1\mid0}D_1' + \Sigma_{vv}\]gives us the last component needed to find $K_1$:\[K_1 = P_{1\mid0}D_1'\parl D_1P_{1\mid0}D_1'+\Sigma_{vv}\parr^{-1}\]where we know that $P_{1\mid0} = A_1P_{0\mid0}A_1' + C_0C_0'$. We can add the projections of $X_1$ on $\tilde{Z}_1$ and $X_{0\mid0}$ to recover the linear minimum variance estimate $X_{1\mid1}$\[X_{1\mid1} = \expect \parl X_1 \mid X_{0\mid0}\parr + \expect\parl X_1\mid \tilde{Z}_1\parr= A_1X_{0\mid0} + K_1\tilde{Z}_1\]It remains to find an expression for the period $t$ covariance. We can rewrite $X_{t\mid t} = K_t \tilde{Z}_t + X_{t\mid t-1}$ as \[X_1 - X_{t\mid t} + K_t \tilde{Z}_t = X_t - X_{t\mid t-1}\]Since the period $t$ error $X_t - X_{t\mid t}$ is orthogonal to $\tilde{Z}_t$, the variance of the right hand side must be equal to the sum of the variances of the terms on the left hand side. We thus have \[P_{t\mid t} + K_t\parl DP_{t\mid t-1} D' + \Sigma_{vv}\parr K_t' = P_{t\mid t-1}\]Rearranging,\[P_{t\mid t} = P_{t\mid t-1} - K_t\parl DP_{t\mid t-1} D' + \Sigma_{vv}\parr K_t' = P_{t\mid t-1} - P_{t\mid t-1}D_t'\parl D_t P_{t\mid t-1}D_t' + \Sigma_{vv}\parr^{-1}D_tP_{t\mid t-1}\]It is then straightforward to show that \[P_{t+1\mid t} = A_{t+1} P_{t\mid t} A_{t+1}' + CC' = A_{t+1}\parl P_{t\mid t-1} - P_{t\mid t-1}D_t'\parl D_t P_{t\mid t-1}D_t' + \Sigma_{vv}\parr^{-1}D_tP_{t\mid t-1} \parr A_{t+1}'+CC'\]
 \end{example}
 
 
