updated for fall 2025

--- a/static/cv/gabe_sekeres_cv.tex
+++ b/static/cv/gabe_sekeres_cv.tex
@@ -36,6 +36,11 @@
 
 \begin{rSection}{Work Experience}
 
+\begin{rSubsection}{Research Assistant for Prof. Marco Battaglini}{July 2025 -- Present}{  Department of Economics, Cornell University}{Ithaca, NY}
+\item[]
+\vspace{-1cm}
+\end{rSubsection}
+
 \begin{rSubsection}{Predoctoral Research Fellow Supervised by Prof. Laurence Baker}{July 2022 -- July 2024}{  Stanford Institute for Economic Policy Research, Stanford University}{Stanford, CA}
 \item[]
 \vspace{-1cm}
@@ -45,16 +50,19 @@
 \vspace{-1cm}
 \end{rSubsection}
 
-\begin{rSubsection}{Teaching Assistant for Prof. Alberto Arredondo-Chavez}{January -- May 2021}{  Economics Department, Haverford College}{Haverford, PA}
-\item[]
-\vspace{-1cm}
-\end{rSubsection}
-
 \begin{rSubsection}{Research Assistant for Prof. Giri Parameswaran}{May -- August 2020}{  Economics Department, Haverford College}{Haverford, PA}
 \item[]
 \vspace{-1cm}
 \end{rSubsection}
- \end{rSection}
+\end{rSection}
+
+
+\begin{rSection}{Teaching Experience}
+	\begin{rSubsection}{Ph.D. Microeconomics (ECON 6090)}{Fall 2025}{  Department of Economics, Cornell University}{Ithaca, NY}
+\item[]
+\vspace{-1cm}
+\end{rSubsection}
+\end{rSection}
 \begin{rSection}{Peer-Reviewed Publications}
 \vspace{-0.5cm}
 	\item Parameswaran, G., \textbf{Sekeres, G.}, and Goldblatt, H. (2025) ``The Politics of the Slippery Slope'' the \emph{Journal of Politics} 87(2). doi: \href{https://doi.org/10.1086/732965}{10.1086/732965}
@@ -62,10 +70,11 @@
 
     \item \textbf{Sekeres, G.}, Miller, T., Mariano, E., Glance, L., and Sun, E. ``Association Between Anesthesia Group Size and Merit-Based Incentive Payment System (MIPS) Scores.'' \emph{Anesthesiology}. 2024 Apr 1. doi: \href{https://doi.org/10.1097/ALN.0000000000004887}{10.1097/ALN.0000000000004887}. PMID: 38470114
 \end{rSection}
-\begin{rSection}{Fellowships and Awards}
+\begin{rSection}{Fellowships and Awards}\vspace{-0.5cm}
 \item \textbf{2024} {Sage Graduate Fellowship}\hfill {Ithaca, NY}
 \item \textbf{2022} {Michael M. Weinstein Prize in Economics}\hfill {Haverford, PA}
-\item \textbf{2022} {Stanford Institute for Economic Policy Research Predoctoral Fellowship} \hfill {Stanford, CA}
+\item \textbf{2022} {Stanford Institute for Economic Policy Research Fellowship}\hfill{Stanford, CA}
+
 \end{rSection}
 \begin{rSection}{Technical Strengths}
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
